# fair-prep

./: .gitignore  README.md  pyproject.toml  research_op_dpo_gtw.tex
colab/: fair_prep_colab.ipynb  setup.sh
lora-bench/: README.md  lb
lora-bench/configs/: base.yaml  dpo_pref.yaml  op_dpo_gtw.yaml  sft_gsm8k.yaml  teacher_4b_algebra.yaml  transfer_4b_to_0_6b.yaml
lora-bench/notebooks/: exploration.ipynb
lora-bench/results/: REPORT.md  baseline.json  dpo.json  math500_baseline.json  math500_baseline_n500.json  math500_dpo.json  math500_dpo_n500.json  math500_gtw.json  math500_gtw_n500.json  math500_sft.json  math500_sft_n500.json  math500_transferred_test.json  op_dpo_gtw.json  sft.json
lora-bench/scripts/: 00_setup.sh  01_eval_baseline.sh  02_train_sft.sh  03_eval_sft.sh  04_train_dpo.sh  05_eval_dpo.sh  06_train_op_dpo_gtw.sh  07_eval_op_dpo_gtw.sh  08_lm_eval.sh  09_eval_math500.sh  20_train_teachers.sh  21_transfer_lora.sh  22_merge_eval.sh  98_only_gtw.sh  99_bench_all.sh
lora-bench/src/: report.py  scaling_law.py
lora-bench/src/cli/: __init__.py  app.py
lora-bench/src/core/: __init__.py  config.py  hooks.py  model.py  utils.py
lora-bench/src/data/: __init__.py  gsm8k.py  math500.py  math_subset.py  preferences.py
lora-bench/src/eval/: __init__.py  analyze.py  gsm8k.py  math500.py  runner.py
lora-bench/src/merge/: __init__.py  merge_lora.py
lora-bench/src/rewards/: __init__.py  gsm8k.py
lora-bench/src/trainers/: __init__.py  dpo.py  op_dpo_gtw.py  replay_buffer.py  sft.py  sft_unsloth.py
lora-bench/src/transfer/: __init__.py  cross_lora.py  (+1 more)
(+1 files in other folders)
